# interactOS

./: .gitignore  README.md
base/applications/cacls/: cacls.rc
base/applications/charmap/: charmap.rc
base/applications/charmap_new/: charmap.rc
boot/bootdata/: CMakeLists.txt
modules/rosapps/: rosapps_shortcuts.inf
modules/rosapps/applications/net/networktool/: CMakeLists.txt
modules/rosapps/applications/net/networktool/resources/: app.manifest  app.rc
modules/rosapps/applications/net/networktool/src/: AboutDialog.c  AboutDialog.h  MainWindow.c  MainWindow.h  SettingsDialog.c  SettingsDialog.h  main.c
modules/rosapps/applications/net/networktool/src/common/: DialogResize.c  DialogResize.h  OuiVendors.c  OuiVendors.h  OutputEdit.c  OutputEdit.h  ResolveIPv4.c  ResolveIPv4.h  TcpQuery.c  TcpQuery.h  Translations.c  Translations.h  resource.h
modules/rosapps/applications/net/networktool/src/tabs/: FingerTab.c  FingerTab.h  InfoTab.c  InfoTab.h  LanScanTab.c  LanScanTab.h  LookupTab.c  LookupTab.h  NetstatTab.c  NetstatTab.h  PingTab.c  PingTab.h  PortScanTab.c  PortScanTab.h  SpeedTab.c  SpeedTab.h  TracerouteTab.c  TracerouteTab.h  WhoisTab.c  WhoisTab.h
modules/rosapps/applications/win32kbench/: CMakeLists.txt  win32kbench-autorun.cmd  win32kbench.c
ntoskrnl/config/: cmdata.c  cmparse.c  cmsysini.c
ntoskrnl/ex/: init.c  sysinfo.c
ntoskrnl/inbv/: bootanim.c  bootanim.rc
ntoskrnl/include/: resource.h
ntoskrnl/kd64/: kddata.c  kdinit.c
ntoskrnl/kdbg/: kdb_cli.c  kdb_expr.c
ntoskrnl/mm/: freelist.c  mmfault.c  mminit.c  section.c  shutdown.c
ntoskrnl/ob/: obhandle.c
ntoskrnl/po/: poshtdwn.c  povolume.c  power.c
ntoskrnl/ps/: apphelp.c  quota.c
ntoskrnl/vdm/: vdmexec.c
sdk/cmake/: gcc.cmake
win32ss/: w32ksvc32.h  w32ksvc64.h
win32ss/include/: ntgdibad.h  ntgdityp.h  ntuser.h
(+2297 files in other folders)
